--- a/client/src/assets/css/cart.css
+++ b/client/src/assets/css/cart.css
@@ -1,3 +1,9 @@
+.cartBtn, .shop_update {
+    background-color: #063852;
+    border-radius: 0.6em;
+    color: #F0810F;
+}
+
 .cart {
     color: #063852;
     font-size: 2em;
@@ -13,7 +19,8 @@
 }
 
 .shop_update {
-    margin-top: 3%;
+    margin: 3% auto;
+    width: 37%;
 }
 
 .total {
@@ -39,18 +46,13 @@ table.rounded tr td:last-child {
     margin-right: 8%;
 }
 
-.cartAddBtn, cartMinusBtn, .cartQuantity {
+.cartAddBtn, .cartMinusBtn, .cartQuantity {
     display: inline-block;
 } 
 
-/* Smartphones (portrait and landscape) ----------- */
 @media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
-    html {
-        font-size: 0.9em;
-    }
-
+and (min-width : 100px)
+and (max-width : 319px) {
     .table {
         padding: 0 !important;
     }
@@ -71,8 +73,36 @@ and (max-width : 480px) {
     }
 
     .shop_update {
+        margin: 3% auto;
+        width: 70%;
+    }
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
+    .table {
+        padding: 0 !important;
+    }
+
+    .cartBtn {
+        display: block;
         margin: auto;
-        margin-bottom: 4%;
+    }
+
+    .clear {
+        font-size: 2em;
+        padding-top: 10vh;
+        padding-bottom: 10vh;
+    }
+
+    .cartAddBtn {
+        width: 64%;
+    }
+
+    .shop_update {
+        margin: 3% auto;
         width: 70%;
     }
 }
@@ -81,19 +111,23 @@ and (max-width : 480px) {
 @media only screen 
 and (min-width: 481px) 
 and (max-width: 600px) {
-    .clear {
-        font-size: 2em;
-        padding-top: 5vh;
-    }
-
     .cartBtn {
         display: block;
         margin: auto;
     }
 
+    .clear {
+        font-size: 2em;
+        padding-top: 10vh;
+        padding-bottom: 10vh;
+    }
+
+    .cartAddBtn {
+        width: 64%;
+    }
+
     .shop_update {
-        margin: auto;
-        margin-bottom: 4%;
+        margin: 3% auto;
         width: 70%;
     }
 }
@@ -103,7 +137,20 @@ and (max-width: 600px) {
 and (min-width : 601px) 
 and (max-width : 768px) 
 and (orientation : portrait) {
-/* Styles */
+    .clear {
+        font-size: 2em;
+        padding-top: 6vh;
+    }
+
+    .cartBtn {
+        display: block;
+        margin: auto;
+    }
+
+    .shop_update {
+        margin: 3% auto;
+        width: 44%;
+    }
 }
 
 /* Tablets, iPads (landscape) ----------- */
@@ -115,11 +162,18 @@ and (orientation: landscape) {
 }
 
 @media only screen
-and (min-width: 1025px) 
+and (min-width: 769px) 
 and (max-width: 1280px) {
 
 }
 
-@media (min-width: 1281px) {
+/* @media only screen 
+and (min-width: 1026px)
+and (max-width: 1280px) {
 
-}
+} */
+
+/* @media only screen
+and (min-width: 1281px)  {
+
+} */   
