--- a/client/src/assets/css/product_carousel.css
+++ b/client/src/assets/css/product_carousel.css
@@ -1,21 +1,33 @@
 .carousel {
-    /* height: 415px; */
+    height: 66vh;
 }
 
-/* Smartphones (portrait and landscape) ----------- */
+/*-------------- Media Queries ------------*/
+
 @media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
+and (min-width : 411px)
+and (max-height : 823px)
+and (orientation : portrait) {
     .carousel {
-        height: 490px;
+        height: 68vh;
     }
 }
 
-@media only screen 
-and (min-width: 481px) 
-and (max-width: 600px) {
-    
-}
+/* Smartphones (portrait and landscape) ----------- */
+/* @media only screen  
+and (max-height : 731px) {
+    .carousel {
+        height: 68vh;
+    }
+} */
+
+/* @media only screen 
+and (min-height: 641px) 
+and (max-height: 731px) {
+    .carousel {
+        height: 71vh;
+    }
+} */
 
 /* Tablets, iPads (portrait) ----------- */
 @media only screen 
@@ -31,6 +43,36 @@ and (min-width : 601px)
 and (max-width : 768px) 
 and (orientation: landscape) {
 /* Styles */
+}
+
+/* iPad (landscape) ---------------*/
+@media only screen 
+and (min-device-width : 1024px)
+and (max-device-height : 768px) 
+and (orientation : landscape) {
+    .carousel {
+        height: 70vh;
+    }
+}
+
+/* iPad Pro (portrait) ---------------*/
+@media only screen 
+and (min-device-width : 1024px)
+and (max-device-height : 1366px)
+and (orientation : portrait) {
+    .carousel {
+        height: 72vh;
+    }
+}
+
+/* iPad Pro (landscape) ---------------*/
+@media only screen 
+and (min-device-width : 1366px)
+and (max-device-height : 1024px)
+and (orientation : landscape) {
+    .carousel {
+        height: 70vh;
+    }
 }
 
 @media only screen
