--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -1,5 +1,3 @@
-.tabs-content.carousel .carousel-item { width: 100%; height: 100%; } 
-
 .black, .blue, .green, .purple, .red {
     border-radius: 0.6em;
 }
@@ -107,6 +105,8 @@
     background-color: #063852;
 }
 
+/*-------------- Media Queries ------------*/
+
 @media only screen 
 and (min-width : 100px)
 and (max-width : 319px) {
@@ -117,7 +117,7 @@ and (max-width : 319px) {
     }    
 
     .content {
-        height: 46%;
+        height: 47%;
         width: 100%;
     }
 
@@ -169,13 +169,13 @@ and (max-width : 319px) {
 and (min-width : 320px) 
 and (max-width : 480px) {
     .carousel .carousel-item {
-        height: 57vh;
-        max-height: 417px;
+        height: 65vh;
+        max-height: 400px;
         width: 70%;
     }    
 
     .content {
-        height: 46%;
+        height: 47%;
         width: 100%;
     }
 
@@ -213,10 +213,18 @@ and (max-width : 480px) {
     }
 }
 
+/* @media only screen 
+and (min-width : 411px)
+and (max-height : 823px)
+and (orientation : portrait) {
+
+} */
+
 /* Smartphones ----------- */
 @media only screen 
-and (min-width: 481px) 
-and (max-width: 600px) {
+and (min-width : 481px) 
+and (max-width : 600px)
+and (orientation : portrait) {
     .carousel .carousel-item {
         height: 54vh;
         max-height: 504px;
@@ -224,7 +232,7 @@ and (max-width: 600px) {
     }    
 
     .content {
-        height: 46%;
+        height: 47%;
         width: 98%;
     }
 
@@ -251,6 +259,76 @@ and (max-width: 600px) {
 
     .productQuantity {
         padding: 0% 13%;
+    }
+}
+
+/* iPhone 5/SE landscape --------*/
+@media only screen 
+and (min-device-width : 568px)
+and (max-device-height : 320px)
+and (orientation : landscape) {
+    .carousel .carousel-item {
+        height: 45vh;
+        width: 70%;
+    }
+
+    .card {
+        height: 94%;
+    }
+    
+    .content {
+        display: inline-block;
+        height: 100%;
+        vertical-align: top;
+        width: 50%;
+    }
+    
+    .name {
+        color: white;
+        font-size: 1.2em;
+        margin: 11% 3% 0 3%;
+    }
+    
+    .price {
+        color: #063852;
+        font-size: 1.4em;
+        text-align: center;
+    }
+    
+    .productInput {
+        height: 39%;
+        margin: auto;
+        width: 90%;
+    }
+    
+    .quantityField {
+        height: 50%;
+        width: 100%;
+    }
+    
+    .inputButtons, .inputSubmit {
+        background-color: #063852;
+        border-radius: 0.6em;
+        color: #F0810F;
+    }
+    
+    .inputButtons {
+        width: 28%;
+    }
+    
+    .inputSubmit {
+        margin-top: 1%;
+        width: 100%;
+    }
+    
+    .productQuantity {
+        background-color: #F0810F;
+        border-radius: 0.6em;
+        color: #063852;
+        display: inline-block;
+        margin: 0 5%;
+        padding: 6% 14%;
+        line-height: 5vh;
     }
 }
 
@@ -297,7 +375,12 @@ and (orientation : portrait) {
 
     .inputButtons {
         font-size: 2em;
+        height: 90%;
         width: 30%;
+    }
+
+    .inputSubmit {
+        height: 40%;
     }
 }
 
@@ -325,7 +408,7 @@ and (orientation: landscape) {
     }
 
     .inputButtons { 
-        width: 29%;
+        width: 28%;
     }
 
     .productQuantity {
@@ -347,6 +430,103 @@ and (max-width: 1280px) {
 
     .inputButtons {
         width: 28%;
+    }
+}
+
+/* iPhone X landscape ---------*/
+@media only screen 
+and (device-width : 812px)
+and (device-height : 375px)
+and (orientation : landscape) {
+    .name {
+        color: white;
+        font-size: 1.7em;
+        margin: 5% 3% 0 3%;
+    }
+
+    .productInput {
+        height: 33%; 
+    }
+        
+    .productQuantity {
+        padding: 4% 14%;
+    }
+}
+
+@media only screen 
+and (max-width : 823px)
+and (max-height : 411px)
+and (orientation : landscape) {
+    .carousel .carousel-item {
+        height: 60vh;
+        width: 75%;
+    }
+}
+
+/* iPad Pro (portrait) ---------------*/
+@media only screen 
+and (min-device-width : 1024px)
+and (max-device-height : 1366px)
+and (orientation : portrait) {
+    .carousel .carousel-item {
+        height: 62vh;
+        width: 70%;
+    }
+
+    .content {
+        height: 48%;
+        width: 100%;
+    }
+
+    .card {
+        display: block; 
+        height: 49%;
+        width: 97%;
+    }
+
+    .name {
+        font-size: 2em;
+        margin-top: 13%;
+        text-align: center;
+    }
+
+    .price {
+        font-size: 2em;
+    }
+
+    .productInput {
+        height: 44%;
+        width: 90%;
+    }
+
+    .productQuantity {
+        font-size: 1.4em;
+        padding: 1% 13%;
+    }
+
+    .inputButtons {
+        font-size: 2em;
+        height: 90%;
+        width: 30%;
+    }
+
+    .inputSubmit {
+        height: 40%;
+    }
+}
+
+/* iPad Pro (landscape) ---------------*/
+@media only screen 
+and (min-device-width : 1366px)
+and (max-device-height : 1024px)
+and (orientation : landscape) {
+    .carousel .carousel-item {
+        height: 40vh;
+        width: 70%;
+    }
+
+    .name {
+        margin-top: 21%;
     }
 }
 
