--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -10,11 +10,11 @@ body {
 }
 
 .logo {
-    background-image: url("../../../dist/logo.png");
+    background-image: url("../../../dist/images/logo.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    height: 25vh;
+    height: calc(7.51vw + 55.97px);
 }
 
 .main_content {
@@ -28,18 +28,23 @@ body {
 .footer-copyright {
     color: #E6DF44;
     font-weight: 500;
-    margin-top: 1%;
-    text-align: center;
-    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-@media only screen 
+.footer-copyright > p  {
+    flex: 0 1 auto;
+    margin: 0;
+}
+
+/* @media only screen 
 and (min-width : 100px)
 and (max-width : 319px) {
     .footer-copyright {
         font-size: 0.6em;
     }
-}
+} */
 
 /*-------------- Media Queries ------------*/
 
@@ -52,10 +57,10 @@ and (max-width : 480px) {
 
 @media only screen
 and (orientation : landscape) {
-    .footer-copyright div {
+    /* .footer-copyright div {
         display: inline-block;
         margin-left: 5px;
-    }   
+    }    */
 }
 
 /* Smartphones ----------- */
@@ -88,10 +93,10 @@ and (orientation: landscape) {
 and (min-device-width : 1024px)
 and (max-device-height : 1366px)
 and (orientation : portrait) {
-    .footer-copyright div {
+    /* .footer-copyright div {
         display: inline-block;
         margin-left: 5px;
-    } 
+    }  */
 }
 
 @media only screen
