--- a/client/src/assets/css/nav_buttons.css
+++ b/client/src/assets/css/nav_buttons.css
@@ -25,6 +25,10 @@
     background-color: #006400;
 }
 
+/* .btn:hover {
+    cursor: url("../../../dist/images/cursor.png"), auto;
+} */
+
 @media only screen 
 and (min-width : 100px)
 and (max-width : 319px) {
