--- a/client/src/assets/css/product_carousel.css
+++ b/client/src/assets/css/product_carousel.css
@@ -1,5 +1,6 @@
 .carousel {
-    height: 66vh;
+    /* height: 66vh; */
+    height: calc(0vh + 440px);
 }
 
 /*-------------- Media Queries ------------*/
@@ -8,9 +9,9 @@
 and (min-width : 411px)
 and (max-height : 823px)
 and (orientation : portrait) {
-    .carousel {
+    /* .carousel {
         height: 68vh;
-    }
+    } */
 }
 
 /* Smartphones (portrait and landscape) ----------- */
@@ -50,9 +51,9 @@ and (orientation: landscape) {
 and (min-device-width : 1024px)
 and (max-device-height : 768px) 
 and (orientation : landscape) {
-    .carousel {
+    /* .carousel {
         height: 70vh;
-    }
+    } */
 }
 
 /* iPad Pro (portrait) ---------------*/
@@ -60,9 +61,9 @@ and (orientation : landscape) {
 and (min-device-width : 1024px)
 and (max-device-height : 1366px)
 and (orientation : portrait) {
-    .carousel {
+    /* .carousel {
         height: 72vh;
-    }
+    } */
 }
 
 /* iPad Pro (landscape) ---------------*/
@@ -70,9 +71,9 @@ and (orientation : portrait) {
 and (min-device-width : 1366px)
 and (max-device-height : 1024px)
 and (orientation : landscape) {
-    .carousel {
+    /* .carousel {
         height: 70vh;
-    }
+    } */
 }
 
 @media only screen
