--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -22,12 +22,22 @@
     background-color: #C21807;
 }
 
+.carousel .carousel-item {
+    display: flex;
+    flex-flow: row wrap;
+    align-content: flex-start;
+    justify-content: space-around;
+    height: 45vh;
+    width: 60%;
+}
+
 .card {
     background-color: white;
     border-radius: 0.6em;
-    display: inline-block;
+    flex: 1 0 auto;
+    /* display: inline-block; */
     height: 95%;
-    margin-left: 1%;
+    /* margin-left: 1%; */
     width: 49%;
 }
 
@@ -37,15 +47,11 @@
     width: 100%;
 }
 
-.carousel .carousel-item {
-    height: 45vh;
-    width: 60%;
-}
-
 .content {
-    display: inline-block;
+    flex: 1 0 auto;
+    /* display: inline-block; */
     height: 100%;
-    vertical-align: top;
+    /* vertical-align: top; */
     width: 50%;
 }
 
@@ -110,7 +116,7 @@
 @media only screen 
 and (min-width : 100px)
 and (max-width : 319px) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 70vh;
         max-height: 253px;
         width: 70%;
@@ -161,14 +167,14 @@ and (max-width : 319px) {
         height: 31%;
         line-height: 0;
         margin-top: 1%;
-    }
+    } */
 }
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
 and (min-width : 320px) 
 and (max-width : 480px) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 65vh;
         max-height: 400px;
         width: 70%;
@@ -210,7 +216,7 @@ and (max-width : 480px) {
 
     .inputSubmit {
         margin-top: 2%;
-    }
+    } */
 }
 
 /* @media only screen 
@@ -225,7 +231,7 @@ and (orientation : portrait) {
 and (min-width : 481px) 
 and (max-width : 600px)
 and (orientation : portrait) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 54vh;
         max-height: 504px;
         width: 70%;
@@ -259,7 +265,7 @@ and (orientation : portrait) {
 
     .productQuantity {
         padding: 0% 13%;
-    }
+    } */
 }
 
 /* iPhone 5/SE landscape --------*/
@@ -267,7 +273,7 @@ and (orientation : portrait) {
 and (min-device-width : 568px)
 and (max-device-height : 320px)
 and (orientation : landscape) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 45vh;
         width: 70%;
     }
@@ -329,7 +335,7 @@ and (orientation : landscape) {
         margin: 0 5%;
         padding: 6% 14%;
         line-height: 5vh;
-    }
+    } */
 }
 
 /* Tablets, iPads (portrait) ----------- */
@@ -337,7 +343,7 @@ and (orientation : landscape) {
 and (min-width : 601px) 
 and (max-width : 768px) 
 and (orientation : portrait) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 62vh;
         width: 70%;
     }
@@ -381,7 +387,7 @@ and (orientation : portrait) {
 
     .inputSubmit {
         height: 40%;
-    }
+    } */
 }
 
 /* Tablets, iPads (landscape) ----------- */
@@ -389,7 +395,7 @@ and (orientation : portrait) {
 and (min-width : 601px) 
 and (max-width : 768px) 
 and (orientation: landscape) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 60vh;
         width: 80%;
     }
@@ -413,13 +419,13 @@ and (orientation: landscape) {
 
     .productQuantity {
         padding: 5% 14%;
-    }
+    } */
 }
 
 @media only screen
 and (min-width: 769px) 
 and (max-width: 1280px) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 45vh;
         width: 75%;
     }
@@ -430,7 +436,7 @@ and (max-width: 1280px) {
 
     .inputButtons {
         width: 28%;
-    }
+    } */
 }
 
 /* iPhone X landscape ---------*/
@@ -438,7 +444,7 @@ and (max-width: 1280px) {
 and (device-width : 812px)
 and (device-height : 375px)
 and (orientation : landscape) {
-    .name {
+    /* .name {
         color: white;
         font-size: 1.7em;
         margin: 5% 3% 0 3%;
@@ -450,17 +456,17 @@ and (orientation : landscape) {
         
     .productQuantity {
         padding: 4% 14%;
-    }
+    } */
 }
 
 @media only screen 
 and (max-width : 823px)
 and (max-height : 411px)
 and (orientation : landscape) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 60vh;
         width: 75%;
-    }
+    } */
 }
 
 /* iPad Pro (portrait) ---------------*/
@@ -468,7 +474,7 @@ and (orientation : landscape) {
 and (min-device-width : 1024px)
 and (max-device-height : 1366px)
 and (orientation : portrait) {
-    .carousel .carousel-item {
+    /* .carousel .carousel-item {
         height: 62vh;
         width: 70%;
     }
@@ -512,7 +518,7 @@ and (orientation : portrait) {
 
     .inputSubmit {
         height: 40%;
-    }
+    } */
 }
 
 /* iPad Pro (landscape) ---------------*/
