--- a/client/src/assets/css/comments.css
+++ b/client/src/assets/css/comments.css
@@ -3,28 +3,18 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    margin: 0;
-    height: 70%;
-    width: 54%;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 61%;
-    position: absolute;
+    height: calc(0vw + 440px);
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     align-content: center;
-
 }
 
 .comment {
-    /* top: 50%;
-    left: 50%; */
     font-size: calc(2.33vw + 8.54px);
-    /* transform: translate(-50%, 0%); */
     transform: translate(0%, 60%);
     color: #F0810F;
-    /* position: absolute; */
     flex: 0 1 auto;
 }
