--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -23,57 +23,78 @@
 }
 
 .carousel .carousel-item {
+    border-radius: 0.6em;
     display: flex;
-    flex-flow: row wrap;
-    align-content: flex-start;
-    justify-content: space-around;
-    height: 45vh;
-    width: 60%;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    /* align-content: flex-start;
+    justify-content: space-around; */
+    /* height: 300px;
+    width: 600px; */
+    /* height: 48vh; */
+    height: calc(12.8vw + 127.27px);
+    /* width: 63%; */
+    width: calc(43.73vw + 10.06px);
 }
 
-.card {
-    background-color: white;
-    border-radius: 0.6em;
-    flex: 1 0 auto;
-    /* display: inline-block; */
-    height: 95%;
-    /* margin-left: 1%; */
-    width: 49%;
+.card, .content {
+    background-color: inherit;
+    /* border-top-left-radius: 0.6em;
+    border-bottom-left-radius: 0.6em; */
+    flex: 1 0 50%;
+    /* flex: 0 0 150px; */
+    /* order: 1; */
+    /* height: 100%;
+    width: 50%; */
+    margin: 0;
+    /* height: calc(14.85vw + 102.45px);
+    width: calc(14.94vw + 102.18px); */
 }
 
 .prodImage {
     border-radius: 0.6em;
-    height: 100%;
-    width: 100%;
+    height: 92%;
+    width: 92%;
+    margin: 4%;
 }
 
 .content {
-    flex: 1 0 auto;
-    /* display: inline-block; */
-    height: 100%;
-    /* vertical-align: top; */
-    width: 50%;
+    /* background-color: inherit; */
+    /* border-top-right-radius: 0.6em;
+    border-bottom-right-radius: 0.6em; */
+    /* flex: 1 0 150px; */
+    /* flex: 0 1 50%; */
+    /* order: 2; */
+    /* height: 100%;
+    width: 50%; */
+    /* height: calc(14.85vw + 102.45px);
+    width: calc(14.94vw + 102.18px); */
 }
 
 .name {
     color: white;
-    font-size: 2em;
-    margin: 11% 3% 0 3%;
+    font-size: calc(1.55vw + 11.02px);
+    margin: 0 4%;
+    margin-top: 8%;
 }
 
 .price {
     color: #063852;
-    font-size: 2em;
+    font-size: calc(1.55vw + 11.02px);
     text-align: center;
+    margin: 4%;
 }
 
 .productInput {
     height: 29%;
-    margin: auto;
-    width: 70%;
+    margin: 0 4%;
+    margin-bottom: 8%;
+    width: 92%;
+    background-color: transparent;
 }
 
 .quantityField {
+    background-color: transparent;
     height: 50%;
     width: 100%;
 }
@@ -82,13 +103,17 @@
     background-color: #063852;
     border-radius: 0.6em;
     color: #F0810F;
+    line-height: inherit;
 }
 
 .inputButtons {
-    width: 28%;
+    width: 30%;
+    height: 100%;
+    vertical-align: top;
 }
 
 .inputSubmit {
+    height: 49%;
     margin-top: 1%;
     width: 100%;
 }
@@ -96,15 +121,30 @@
 .productQuantity {
     background-color: #F0810F;
     border-radius: 0.6em;
-    color: #063852;
+    margin: 0 1%;
+    padding: 0 12%;
     display: inline-block;
-    margin: 0 5%;
-    padding: 1% 14%;
-    line-height: 5vh;
+    width: 38%;
+    height: 100%;
+}
+
+input[type=number]:not(.browser-default) {
+    border-bottom: none!important;
+    box-shadow: none!important;
+    color: #063852;
+    margin: 0;
+    height: inherit;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none; 
+    margin: 0; 
 }
 
 .btn:hover {
-    background-color: #006400;
+    background-color: transparent;
+    cursor: url("../../../dist/images/cursor.png"), auto;
 }
 
 .btn:focus {
