--- a/client/src/assets/css/nav_buttons.css
+++ b/client/src/assets/css/nav_buttons.css
@@ -1,24 +1,31 @@
 .navBar, .mobileNavBar {
-    display: inline-block;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    height: calc(6.67vh + 108.33px);
     position: fixed;
     width: 15%;
 }
+
 .navButtons {
     background-color: #063852;
     border-radius: 0.6em;
     color: #F0810F;
-    display: block;
-    margin: 5% auto;
+    flex: 0 1 auto;
     width: 60%;
+    font-size: calc(0.39vw + 8.64px);
+    padding: inherit;
 }
 
 .iconButtons {
     background-color: #063852;
     border-radius: 0.6em;
     color: #F0810F;
-    font-size: 1.5em;
-    margin: 5% auto;
-    padding: 14%;
+    font-size: 1.3em;
+    flex: 0 1 auto;
+    padding: 8%;
 }
 
 .pulse {
@@ -26,85 +33,8 @@
 }
 
 @media only screen 
-and (min-width : 100px)
-and (max-width : 319px) {
+and (max-width: 600px) {
     .mobileNavBar {
-        display: inline-block !important;
+        display: inline-flex !important;
     }
-
-    .iconButtons {
-        display: block;
-        font-size: 4vw;
-        width: 51%;
-    }
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-width : 320px) 
-and (max-width : 1000px) {
-    .mobileNavBar {
-        top: 0;
-        right: 0;
-        text-align: center;
-    }
-}
-
-/* Tablets, iPads (portrait) ----------- */
-@media only screen 
-and (min-width : 601px) 
-and (max-width : 768px) 
-and (orientation : portrait) {
-    .navBar {
-        display: none !important;
-    }
-
-    .mobileNavBar {
-        display: inline-block !important;
-    }
-
-    .iconButtons {
-        display: block;
-        font-size: 1.5em;
-        width: 51%;
-    }
-}
-
-/* Tablets, iPads (landscape) ----------- */
-@media only screen 
-and (min-width : 601px) 
-and (max-width : 768px) 
-and (orientation: landscape) {
-    .navBar {
-        display: none !important;
-    }
-
-    .mobileNavBar {
-        display: inline-block !important;
-    }
-
-    .iconButtons {
-        display: block;
-        font-size: 1.3em;
-        width: 50%;
-    }
-}
-
-@media only screen
-and (min-width: 769px) 
-and (max-width: 1025px) {
-    .navButtons {
-        padding: 0 3%;
-    }    
-}
-
-@media only screen 
-and (min-width: 1026px)
-and (max-width: 1280px) {
-
-}
-
-@media only screen
-and (min-width: 1281px) {
-
 }
