--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -26,29 +26,15 @@
     border-radius: 0.6em;
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center; */
-    /* align-content: flex-start;
-    justify-content: space-around; */
-    /* height: 300px;
-    width: 600px; */
-    /* height: 48vh; */
-    height: calc(12.8vw + 127.27px);
-    /* width: 63%; */
-    width: calc(43.73vw + 10.06px);
+    overflow: hidden;
+    height: auto;
+    width: calc(31.33vw + 172.06px);
 }
 
 .card, .content {
     background-color: inherit;
-    /* border-top-left-radius: 0.6em;
-    border-bottom-left-radius: 0.6em; */
     flex: 1 0 50%;
-    /* flex: 0 0 150px; */
-    /* order: 1; */
-    /* height: 100%;
-    width: 50%; */
     margin: 0;
-    /* height: calc(14.85vw + 102.45px);
-    width: calc(14.94vw + 102.18px); */
 }
 
 .prodImage {
@@ -56,19 +42,6 @@
     height: 92%;
     width: 92%;
     margin: 4%;
-}
-
-.content {
-    /* background-color: inherit; */
-    /* border-top-right-radius: 0.6em;
-    border-bottom-right-radius: 0.6em; */
-    /* flex: 1 0 150px; */
-    /* flex: 0 1 50%; */
-    /* order: 2; */
-    /* height: 100%;
-    width: 50%; */
-    /* height: calc(14.85vw + 102.45px);
-    width: calc(14.94vw + 102.18px); */
 }
 
 .name {
@@ -151,449 +124,15 @@ input[type=number]::-webkit-outer-spin-button {
     background-color: #063852;
 }
 
-/*-------------- Media Queries ------------*/
-
-@media only screen 
-and (min-width : 100px)
-and (max-width : 319px) {
-    /* .carousel .carousel-item {
-        height: 70vh;
-        max-height: 253px;
-        width: 70%;
-    }    
-
-    .content {
-        height: 47%;
-        width: 100%;
-    }
-
-    .card {   
-        display: block;
-        height: 47%;
-        margin: 2% auto;
-        width: 97%;
-    }
-
-    .name {
-        font-size: 0.9em;
-        margin-top: 0;
-        text-align: center;
-    }
-
-    .price {
-        font-size: 0.9em;
-    }
-
-    .productInput {
-        height: 46%;
-        width: 90%;
-    }    
-
-    .productQuantity {
-        padding: 0 11%;
-        font-size: 0.5em;
-    }
-
-    .inputButtons {
-        line-height: 0;
-        padding: 0 2%;
-        height: 4vmax;
-        width: 29%;
-        font-size: 0.7em;
-    }
-
-    .inputSubmit {
-        font-size: 0.4em;
-        height: 31%;
-        line-height: 0;
-        margin-top: 1%;
-    } */
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
-    /* .carousel .carousel-item {
-        height: 65vh;
-        max-height: 400px;
-        width: 70%;
-    }    
-
-    .content {
-        height: 47%;
-        width: 100%;
-    }
-
-    .card {
-        display: block; 
-        height: 47%;
-        width: 97%;
-    }
-
-    .name {
-        font-size: 1.3em;
-        margin-top: 0;
-        text-align: center;
-    }
-
-    .price {
-        font-size: 1.3em;
-    }
-
-    .productInput {
-        height: 47%;
-        width: 90%;
-    }
-
-    .productQuantity {
-        padding: 3% 13%;
-    }
-
-    .inputButtons {
-        width: 29%;
-    }
-
-    .inputSubmit {
-        margin-top: 2%;
-    } */
-}
-
-/* @media only screen 
-and (min-width : 411px)
-and (max-height : 823px)
-and (orientation : portrait) {
-
-} */
-
-/* Smartphones ----------- */
-@media only screen 
-and (min-width : 481px) 
-and (max-width : 600px)
-and (orientation : portrait) {
-    /* .carousel .carousel-item {
-        height: 54vh;
-        max-height: 504px;
-        width: 70%;
-    }    
-
-    .content {
-        height: 47%;
-        width: 98%;
-    }
-
-    .card {
-        display: block; 
-        height: 49%;
-        width: 97%;
-    }
-
-    .name {
-        font-size: 1.8em;
-        margin-top: 7%;
-        text-align: center;
-    }
-
-    .price {
-        font-size: 1.8em;
-    }
-
-    .productInput {
-        height: 44%;
-        width: 90%;
-    }
-
-    .productQuantity {
-        padding: 0% 13%;
-    } */
-}
-
-/* iPhone 5/SE landscape --------*/
-@media only screen 
-and (min-device-width : 568px)
-and (max-device-height : 320px)
-and (orientation : landscape) {
-    /* .carousel .carousel-item {
-        height: 45vh;
-        width: 70%;
-    }
-
-    .card {
-        height: 94%;
-    }
-    
-    .content {
-        display: inline-block;
-        height: 100%;
-        vertical-align: top;
-        width: 50%;
-    }
-    
-    .name {
-        color: white;
-        font-size: 1.2em;
-        margin: 11% 3% 0 3%;
-    }
-    
-    .price {
-        color: #063852;
-        font-size: 1.4em;
-        text-align: center;
-    }
-    
-    .productInput {
-        height: 39%;
-        margin: auto;
-        width: 90%;
-    }
-    
-    .quantityField {
-        height: 50%;
-        width: 100%;
-    }
-    
-    .inputButtons, .inputSubmit {
-        background-color: #063852;
-        border-radius: 0.6em;
-        color: #F0810F;
-    }
-    
-    .inputButtons {
-        width: 28%;
-    }
-    
-    .inputSubmit {
-        margin-top: 1%;
-        width: 100%;
-    }
-    
-    .productQuantity {
-        background-color: #F0810F;
-        border-radius: 0.6em;
-        color: #063852;
-        display: inline-block;
-        margin: 0 5%;
-        padding: 6% 14%;
-        line-height: 5vh;
-    } */
-}
-
-/* Tablets, iPads (portrait) ----------- */
-@media only screen 
-and (min-width : 601px) 
-and (max-width : 768px) 
-and (orientation : portrait) {
-    /* .carousel .carousel-item {
-        height: 62vh;
-        width: 70%;
-    }
-
-    .content {
-        height: 48%;
-        width: 100%;
-    }
-
-    .card {
-        display: block; 
-        height: 49%;
-        width: 97%;
-    }
-
-    .name {
-        font-size: 2em;
-        margin-top: 7%;
-        text-align: center;
-    }
-
-    .price {
-        font-size: 2em;
-    }
-
-    .productInput {
-        height: 44%;
-        width: 90%;
-    }
-
-    .productQuantity {
-        font-size: 1.4em;
-        padding: 1% 13%;
-    }
-
-    .inputButtons {
-        font-size: 2em;
-        height: 90%;
-        width: 30%;
-    }
-
-    .inputSubmit {
-        height: 40%;
-    } */
-}
-
-/* Tablets, iPads (landscape) ----------- */
-@media only screen 
-and (min-width : 601px) 
-and (max-width : 768px) 
-and (orientation: landscape) {
-    /* .carousel .carousel-item {
-        height: 60vh;
-        width: 80%;
-    }
-
-    .name {
-        font-size: 1.7em;
-    }
-
-    .price {
-        font-size: 1.7em;
-    }
-
-    .productInput {
-        height: 42%;
-        width: 87%;
-    }
-
-    .inputButtons { 
-        width: 28%;
-    }
-
-    .productQuantity {
-        padding: 5% 14%;
-    } */
-}
-
 @media only screen
-and (min-width: 769px) 
-and (max-width: 1280px) {
-    /* .carousel .carousel-item {
-        height: 45vh;
-        width: 75%;
-    }
-
-    .productInput {
-        width: 80%;
-    }
-
-    .inputButtons {
-        width: 28%;
-    } */
-}
-
-/* iPhone X landscape ---------*/
-@media only screen 
-and (device-width : 812px)
-and (device-height : 375px)
-and (orientation : landscape) {
-    /* .name {
-        color: white;
-        font-size: 1.7em;
-        margin: 5% 3% 0 3%;
-    }
-
-    .productInput {
-        height: 33%; 
-    }
-        
-    .productQuantity {
-        padding: 4% 14%;
-    } */
-}
-
-@media only screen 
-and (max-width : 823px)
-and (max-height : 411px)
-and (orientation : landscape) {
-    /* .carousel .carousel-item {
-        height: 60vh;
-        width: 75%;
-    } */
-}
-
-/* iPad Pro (portrait) ---------------*/
-@media only screen 
-and (min-device-width : 1024px)
-and (max-device-height : 1366px)
-and (orientation : portrait) {
-    /* .carousel .carousel-item {
-        height: 62vh;
-        width: 70%;
-    }
-
-    .content {
-        height: 48%;
-        width: 100%;
-    }
-
-    .card {
-        display: block; 
-        height: 49%;
-        width: 97%;
-    }
-
-    .name {
-        font-size: 2em;
-        margin-top: 13%;
-        text-align: center;
-    }
-
-    .price {
-        font-size: 2em;
-    }
-
-    .productInput {
-        height: 44%;
-        width: 90%;
-    }
-
-    .productQuantity {
-        font-size: 1.4em;
-        padding: 1% 13%;
-    }
-
-    .inputButtons {
-        font-size: 2em;
-        height: 90%;
-        width: 30%;
-    }
-
-    .inputSubmit {
-        height: 40%;
-    } */
-}
-
-/* iPad Pro (landscape) ---------------*/
-/* @media only screen 
-and (min-device-width : 1366px)
-and (max-device-height : 1024px)
-and (orientation : landscape) {
+and (orientation: portrait) {
     .carousel .carousel-item {
-        height: 40vh;
-        width: 70%;
+        height: calc(56.39vh + 29.70px);
+        width: calc(31.96vw + 72.73px);
     }
 
-    .name {
-        margin-top: 21%;
+    .card, .content {
+        flex: 1 0 100%;
+        height: calc(28.20vh + 14.85px);
     }
-} */
-
-/* @media only screen 
-and (min-width: 1026px)
-and (max-width: 1280px) {
-
-} */
-
-/* @media only screen
-and (min-width: 1281px) {
-    .carousel .carousel-item {
-        height: 45vh;
-        width: 75%;
-    }
-
-    .productInput {
-        width: 80%;
-    }
-
-    .inputButtons {
-        width: 29%;
-    }
-} */
+}
