--- a/client/src/assets/css/cart.css
+++ b/client/src/assets/css/cart.css
@@ -11,7 +11,7 @@
 
 .clear {
     color: #063852;
-    font-size: 2.6em;
+    font-size: calc(2.26vw + 7.19px);
 }
 
 .clear:hover {
@@ -191,20 +191,3 @@ and (orientation: landscape) {
         width: 41%;
     }
 }
-
-@media only screen
-and (min-width: 769px) 
-and (max-width: 1280px) {
-
-}
-
-/* @media only screen 
-and (min-width: 1026px)
-and (max-width: 1280px) {
-
-} */
-
-/* @media only screen
-and (min-width: 1281px)  {
-
-} */   
