--- a/client/src/assets/css/logo.css
+++ b/client/src/assets/css/logo.css
@@ -3,7 +3,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    margin: auto;
     height: calc(26.23vh - 13.93px);
+    width: calc(10.03vw + 13.06px);
 }
 
 .logo:hover {
