using regex to validate email and password

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -17,6 +17,10 @@ body {
     min-height: 100vh;
 }
 
+main {
+    min-height: 72vh;
+}
+
 .footer-copyright {
     color: #E6DF44;
     font-weight: 500;
