install npm sessions

--- a/client/src/assets/css/cart.css
+++ b/client/src/assets/css/cart.css
@@ -30,13 +30,13 @@
 }
 
 table.rounded tr td:first-child {
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
+    border-top-left-radius: 0.6em;
+    border-bottom-left-radius: 0.6em;
 }    
 
 table.rounded tr td:last-child {
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
+    border-top-right-radius: 0.6em;
+    border-bottom-right-radius: 0.6em;
 }
 
 .cartAddBtn {
