--- a/client/src/assets/css/cart.css
+++ b/client/src/assets/css/cart.css
@@ -9,9 +9,16 @@
     font-size: 2em;
 }
 
+/* table.rounded tr td:first-child {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
 .clear {
+    /* align-self: center; */
     color: #063852;
-    font-size: 2.6em;
+    font-size: calc(0.92vw + 29.06px);
 }
 
 .clear:hover {
@@ -63,80 +70,8 @@ and (orientation: portrait) {
     .cartAddBtn, .cartMinusBtn, .cartQuantity {
         flex: 1 0 100%;
     }
-}
 
-@media only screen 
-and (min-width : 100px)
-and (max-width : 319px) {
     .table {
         padding: 0 !important;
-    }
-
-    .clear {
-        font-size: 2em;
-        padding-top: 10vh;
-        padding-bottom: 10vh;
-    }
-
-    .cartAddBtn {
-        width: 64%;
-    }
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
-    .table {
-        padding: 0 !important;
-    }
-
-    .clear {
-        font-size: 2em;
-        padding-top: 10vh;
-        padding-bottom: 10vh;
-    }
-}
-
-/* Smartphones ----------- */
-@media only screen 
-and (min-width: 481px) 
-and (max-width: 600px)
-and (orientation : portrait) {
-    .clear {
-        font-size: 2em;
-        padding-top: 10vh;
-        padding-bottom: 10vh;
-    }
-}
-
-@media only screen 
-and (min-width: 481px) 
-and (max-width: 600px)
-and (orientation : landscape) {
-    .clear {
-        padding-top: 16vh;
-        font-size: 2em;
-    }
-}
-
-/* Tablets, iPads (portrait) ----------- */
-@media only screen 
-and (min-width : 601px) 
-and (max-width : 768px) 
-and (orientation : portrait) {
-    .clear {
-        font-size: 2em;
-        padding-top: 6vh;
-    }
-}
-
-/* Tablets, iPads (landscape) ----------- */
-@media only screen 
-and (min-width : 601px) 
-and (max-width : 768px) 
-and (orientation: landscape) {
-    .clear {
-        padding-top: 12vh;
     }
 }
