--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -117,6 +117,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .btn:hover {
     background-color: transparent;
+    color: #063852;
     cursor: url("../../../dist/images/cursor.png"), auto;
 }
 
