added auth signOut

--- a/client/src/assets/css/comments.css
+++ b/client/src/assets/css/comments.css
@@ -14,7 +14,7 @@
 
 .comment {
     font-size: calc(2vw + 4.61px);
-    transform: translate(0%, 60%);
+    transform: translate(0%, 80%);
     color: #F0810F;
-    flex: 0 1 auto;
+    flex: 1;
 }
