--- a/client/src/assets/css/product_carousel.css
+++ b/client/src/assets/css/product_carousel.css
@@ -1,5 +1,5 @@
 .carousel {
-    height: calc(72.79vh - 4.92px);
+    height: calc(69.51vh + 5.57px);
 }
 
 /*-------------- Media Queries ------------*/
