--- a/client/src/assets/css/logo.css
+++ b/client/src/assets/css/logo.css
@@ -4,8 +4,8 @@
     background-position: center;
     background-size: contain;
     margin: auto;
-    height: calc(9.84vh + 98.52px);
-    width: calc(3.76vw + 108.65px);
+    height: calc(29.51vh - 24.43px);
+    width: calc(11.28vw + 5.94px);
 }
 
 .logo:hover {
