--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -123,6 +123,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .btn:focus {
     background-color: #063852;
+    color: #F0810F;
 }
 
 @media only screen
